plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

allprojects {
    group = 'net.ftgo'
    version = '1.0.0-SNAPSHOT'
    
    repositories {
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    
    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
    
    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    
    dependencies {
        // Spring Boot Starters
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        
        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        
        // Testing
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.testcontainers:testcontainers:1.19.3'
        testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
        testImplementation 'org.testcontainers:kafka:1.19.3'
        testImplementation 'org.testcontainers:mysql:1.19.3'
        testImplementation 'net.jqwik:jqwik:1.8.2'
        testImplementation 'io.rest-assured:rest-assured:5.4.0'
        testImplementation 'org.awaitility:awaitility:4.2.0'
        testRuntimeOnly 'com.h2database:h2'
    }
    
    dependencyManagement {
        imports {
            mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.0'
            mavenBom 'io.eventuate.tram.core:eventuate-tram-bom:0.34.0.RELEASE'
            mavenBom 'io.eventuate.tram.sagas:eventuate-tram-sagas-bom:0.23.0.RELEASE'
        }
    }
    
    tasks.named('test') {
        useJUnitPlatform()
        
        // Configure jqwik for property-based testing
        systemProperty 'jqwik.tries.default', '100'
        systemProperty 'jqwik.reporting.usejunitplatform', 'true'
    }
    
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['-parameters']
    }
}

// Common module configuration
project(':common') {
    bootJar {
        enabled = false
    }
    jar {
        enabled = true
    }
}

// Service-specific configurations
configure(subprojects.findAll { it.name != 'common' && it.name != 'api-gateway' }) {
    dependencies {
        implementation project(':common')
        
        // Web
        implementation 'org.springframework.boot:spring-boot-starter-web'
        
        // Kafka & Eventuate Tram
        implementation 'org.springframework.kafka:spring-kafka'
        implementation 'io.eventuate.tram.core:eventuate-tram-spring-messaging'
        implementation 'io.eventuate.tram.core:eventuate-tram-spring-events'
        implementation 'io.eventuate.tram.core:eventuate-tram-spring-commands'
        
        // Observability
        implementation 'io.micrometer:micrometer-registry-prometheus'
        implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:2.0.0'
        
        // JSON Logging
        implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
        
        testImplementation 'org.springframework.kafka:spring-kafka-test'
    }
}

// Order Service specific dependencies (saga orchestrator)
project(':order-service') {
    dependencies {
        implementation 'io.eventuate.tram.sagas:eventuate-tram-sagas-spring-orchestration-simple-dsl'
        implementation 'io.eventuate.tram.sagas:eventuate-tram-sagas-spring-participant'
        implementation 'io.eventuate.tram.core:eventuate-tram-spring-jdbc-kafka'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'com.mysql:mysql-connector-j'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.flywaydb:flyway-mysql'
        implementation 'com.zaxxer:HikariCP'
        
        // Saga testing support
        testImplementation 'io.eventuate.tram.sagas:eventuate-tram-sagas-testing-support'
        testImplementation project(':consumer-service')
        testImplementation project(':kitchen-service')
        testImplementation project(':accounting-service')
        implementation 'com.zaxxer:HikariCP'
    }
}

// Consumer Service
project(':consumer-service') {
    dependencies {
        implementation 'io.eventuate.tram.sagas:eventuate-tram-sagas-spring-participant'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'com.mysql:mysql-connector-j'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.flywaydb:flyway-mysql'
        implementation 'com.zaxxer:HikariCP'
    }
}

// Restaurant Service
project(':restaurant-service') {
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'com.mysql:mysql-connector-j'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.flywaydb:flyway-mysql'
        implementation 'com.zaxxer:HikariCP'
    }
}

// Kitchen Service
project(':kitchen-service') {
    dependencies {
        implementation 'io.eventuate.tram.sagas:eventuate-tram-sagas-spring-participant'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'com.mysql:mysql-connector-j'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.flywaydb:flyway-mysql'
        implementation 'com.zaxxer:HikariCP'
    }
}

// Accounting Service
project(':accounting-service') {
    dependencies {
        implementation 'io.eventuate.tram.sagas:eventuate-tram-sagas-spring-participant'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'com.mysql:mysql-connector-j'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.flywaydb:flyway-mysql'
        implementation 'com.zaxxer:HikariCP'
    }
}

// Delivery Service
project(':delivery-service') {
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'com.mysql:mysql-connector-j'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.flywaydb:flyway-mysql'
        implementation 'com.zaxxer:HikariCP'
    }
}

// Order History Service (CQRS with ScyllaDB)
project(':order-history-service') {
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
        testImplementation 'org.testcontainers:cassandra:1.19.3'
    }
}

// API Gateway
project(':api-gateway') {
    dependencies {
        implementation project(':common')
        
        // Reactive Gateway
        implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.security:spring-security-oauth2-resource-server'
        implementation 'org.springframework.security:spring-security-oauth2-jose'
        implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
        implementation 'io.github.resilience4j:resilience4j-reactor:2.1.0'
        implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.1.0'
        
        // Observability
        implementation 'io.micrometer:micrometer-registry-prometheus'
        
        // JWT testing support
        testImplementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'
        
        // WireMock for integration testing
        testImplementation 'org.wiremock:wiremock-standalone:3.3.1'
        
        // Redis Testcontainer
        testImplementation 'org.testcontainers:testcontainers:1.19.3'
        testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
        
        // Reactor test support
        testImplementation 'io.projectreactor:reactor-test'
    }
}

wrapper {
    gradleVersion = '8.5'
    distributionType = Wrapper.DistributionType.ALL
}
